--- a/downloads/rangdong-staff.plist
+++ b/downloads/rangdong-staff.plist
@@ -11,33 +11,33 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://github.com/truesight-team/vinaseed-apps/releases/download/dev/VinaseedDaiLy.ipa</string>
+                        <string>https://github.com/truesight-team/rangdong-apps/releases/download/dev/DMSNhanVien.ipa</string>
                     </dict>
                     <dict>
                         <key>kind</key>
                         <string>display-image</string>
                         <key>url</key>
-                        <string>https://vinaseed-apps.truesight.asia/downloads/images/57.png</string>
+                        <string>https://rangdong-apps.truesight.asia/downloads/images/57.png</string>
                     </dict>
                     <dict>
                         <key>kind</key>
                         <string>full-size-image</string>
                         <key>url</key>
-                        <string>https://vinaseed-apps.truesight.asia/downloads/images/512.png</string>
+                        <string>https://rangdong-apps.truesight.asia/downloads/images/512.png</string>
                     </dict>
                 </array>
                 <key>metadata</key>
                 <dict>
                     <key>bundle-identifier</key>
-                    <string>vn.com.fpt.vinaseed-store</string>
+                    <string>vn.com.fpt.mycompany</string>
                     <key>bundle-version</key>
-                    <string>1.0</string>
+                    <string>1.9.0</string>
                     <key>kind</key>
                     <string>software</string>
                     <key>platform-identifier</key>
                     <string>com.apple.platform.iphoneos</string>
                     <key>title</key>
-                    <string>App Đại lý Vinaseed</string>
+                    <string>DMS Nhân viên Rạng Đông</string>
                 </dict>
             </dict>
         </array>
